bit better release file generation

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,15 @@
 AC_PREREQ([2.69])
 AC_INIT([icewm],[1.4.2],[https://github.com/bbidulock/icewm/issues])
 AC_REVISION([1.4.2])
+
+# set better defaults
+AC_PREFIX_DEFAULT([/usr])
+if test "$prefix" = /usr -o "$prefix" = NONE; then
+	test "$sysconfdir" = '${prefix}/etc' && sysconfdir=/etc
+	test "$sharedstatedir" = '${prefix}/com' && sharedstatedir=/var
+	test "$localstatedir" = '${prefix}/var' && localstatedir=/var
+fi
+
 AC_CONFIG_SRCDIR([src/ysmapp.cc])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -14,6 +23,9 @@ AC_CANONICAL_TARGET
 DATE='2017-07-30'
 AC_SUBST([DATE])
 
+MDOCDATE='July 30, 2017'
+AC_SUBST([MDOCDATE])
+
 BRANCH='1.4.2'
 AC_SUBST([BRANCH])
 
@@ -23,10 +35,9 @@ TESTCASES="$TESTCASES iceview icesame iceicon icerun icelist icebar" # iceclock
 features=''
 
 # Initialize Automake
-AM_INIT_AUTOMAKE([gnits 1.13.4 dist-xz no-dist-gzip std-options -Wall color-tests silent-rules tar-pax])
+AM_INIT_AUTOMAKE([1.16 dist-lzip no-dist-gzip std-options -Wall color-tests silent-rules tar-pax])
 AM_MAINTAINER_MODE
 AM_SILENT_RULES([yes])
-AC_PREFIX_DEFAULT([/usr])
 
 # Checks for programs.
 AC_LANG_CPLUSPLUS
@@ -49,7 +60,7 @@ AC_ARG_VAR([MARKDOWN],[markdown command. @<:@default=markdown@:>@])
 AC_CHECK_PROGS([MARKDOWN],[markdown],[${am_missing_run}markdown],[$PATH])
 
 AC_ARG_VAR([ASCIIDOC],[asciidoc command. @<:@default=asciidoctor@:>@])
-AC_CHECK_PROGS([ASCIIDOC],[asciidoctor asciidoc],[${am_missing_run}asciidoctor],[$PATH])
+AC_CHECK_PROGS([ASCIIDOC],[asciidoc asciidoctor],[${am_missing_run}asciidoc],[$PATH])
 
 AC_ARG_VAR([ASCIIDOC_BACKEND],[asciidoc backend @<:@default=NONE@:>@])
 if test -z "$ASCIIDOC_BACKEND"; then
@@ -57,6 +68,18 @@ if test -z "$ASCIIDOC_BACKEND"; then
 		asciidoc) ASCIIDOC_BACKEND="--backend=html4" ;;
 		asciidoctor) ASCIIDOC_BACKEND="--backend=html5" ;;
 		*) AC_MSG_WARN([ASCIIDOC $ASCIIDOC is not supported.]) ;;
+	esac
+fi
+
+AC_ARG_VAR([ASCIIMAN],[asciidoc to manpage converter. @<:@default=a2x@:>@])
+AC_CHECK_PROGS([ASCIIMAN],[a2x asciidoctor],[${am_missing_run}a2x],[$PATH])
+
+AC_ARG_VAR([ASCIIMAN_FORMAT],[asciidoc manpage option @<:@default=NONE@:>@])
+if test -z "$ASCIIMAN_FORMAT"; then
+	case "$ASCIIMAN" in
+		a2x) ASCIIMAN_FORMAT="--format=manpage" ;;
+		asciidoctor) ASCIIMAN_FORMAT="--backend=manpage" ;;
+		*) AC_MSG_WARN([ASCIIMAN $ASCIIMAN is not supported.]) ;;
 	esac
 fi
 
@@ -71,7 +94,6 @@ LT_PATH_LD
 LT_PREREQ([2.4.2])
 LT_INIT([dlopen])
 LT_LANG([C++])
-AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
 AM_GNU_GETTEXT_VERSION([0.19.2])
@@ -95,6 +117,7 @@ PKG_PROG_PKG_CONFIG
 # Checks for libraries.
 
 # Checks for header files.
+AS_BOX([Header Files])
 AC_HEADER_STDC
 AC_HEADER_DIRENT
 AC_HEADER_SYS_WAIT
@@ -110,6 +133,7 @@ AC_CHECK_HEADERS([sys/sched.h sys/socket.h sys/soundcard.h sys/sysctl.h sys/time
 AC_CHECK_HEADERS([unistd.h uvm/uvm_param.h wchar.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
+AS_BOX([Typedefs, Structures, Compiler])
 AC_CHECK_HEADER_STDBOOL
 AC_C_INLINE
 AC_TYPE_PID_T
