reduce checks to essentials to speedup compilation a bit

--- a/configure.ac
+++ b/configure.ac
@@ -2,10 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([icewm],[1.6.2],
+AC_INIT([icewm],[1.6.3],
         [https://github.com/bbidulock/icewm/issues],
         [icewm],[https://ice-wm.org])
-AC_REVISION([1.6.2])
+AC_REVISION([1.6.3])
 AC_CONFIG_SRCDIR([src/ysmapp.cc])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -13,7 +13,7 @@ AC_CONFIG_AUX_DIR([scripts])
 AC_USE_SYSTEM_EXTENSIONS
 AC_CANONICAL_TARGET
 
-DATE='2019-09-17'
+DATE='2019-11-24'
 AC_SUBST([DATE])
 
 BRANCH='icewm-1-4-BRANCH'
@@ -103,13 +103,12 @@ AC_HEADER_SYS_WAIT
 AC_PATH_X
 AC_PATH_XTRA
 AC_CHECK_HEADERS([execinfo.h fcntl.h])
-AC_CHECK_HEADERS([langinfo.h libgen.h libintl.h limits.h locale.h])
+AC_CHECK_HEADERS([libgen.h])
 AC_CHECK_HEADERS([machine/apm_bios.h machine/apmvar.h])
-AC_CHECK_HEADERS([netdb.h netinet/in.h])
-AC_CHECK_HEADERS([sched.h sndfile.h stddef.h stdlib.h string.h])
+AC_CHECK_HEADERS([sched.h sndfile.h])
 AC_CHECK_HEADERS([sys/dkstat.h sys/file.h sys/ioctl.h sys/param.h])
-AC_CHECK_HEADERS([sys/sched.h sys/socket.h sys/soundcard.h sys/sysctl.h sys/time.h])
-AC_CHECK_HEADERS([unistd.h uvm/uvm_param.h wchar.h])
+AC_CHECK_HEADERS([sys/sched.h sys/soundcard.h sys/sysctl.h])
+AC_CHECK_HEADERS([uvm/uvm_param.h wchar.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
@@ -130,14 +129,11 @@ AC_TYPE_SIGNAL
 if test x$cross_compling != xyes ; then :; AC_FUNC_FORK fi
 if test x$cross_compling != xyes ; then :; AC_FUNC_MALLOC fi
 if test x$cross_compling != xyes ; then :; AC_FUNC_REALLOC fi
-AC_CHECK_FUNCS([abort backtrace_symbols_fd basename dup2])
-AC_CHECK_FUNCS([gethostbyname gethostname gettimeofday])
-AC_CHECK_FUNCS([if_nametoindex if_indextoname if_nameindex])
-AC_CHECK_FUNCS([mblen memchr memmove memset mkdir nl_langinfo])
+AC_CHECK_FUNCS([abort backtrace_symbols_fd])
+AC_CHECK_FUNCS([if_nametoindex if_nameindex])
+AC_CHECK_FUNCS([mblen memmem memmove memrchr nl_langinfo])
 AC_CHECK_FUNCS([select setlocale socket])
-AC_CHECK_FUNCS([strcasecmp strchr strcspn strdup strerror strncasecmp])
-AC_CHECK_FUNCS([strrchr strsignal strspn strstr strtol strtoul])
-AC_CHECK_FUNCS([sysctl sysctlbyname sysinfo uname wordexp])
+AC_CHECK_FUNCS([sysctl sysctlbyname sysinfo wordexp])
 AC_CHECK_FUNC([getloadavg],[AC_DEFINE([HAVE_GETLOADAVG2], 1, [getloadavg() is available])])
 AC_FUNC_SELECT_ARGTYPES
 
