getloadavg is needed for non-linux.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,10 +106,12 @@ endif()
 # perl -e 'print "#cmakedefine HAVE_".uc($_)."\n" for @ARGV' `cat exlist`
 CHECK_FUNCTION_EXISTS(abort HAVE_ABORT)
 CHECK_FUNCTION_EXISTS(backtrace_symbols_fd HAVE_BACKTRACE_SYMBOLS_FD)
+CHECK_FUNCTION_EXISTS(getloadavg HAVE_GETLOADAVG2)
 CHECK_FUNCTION_EXISTS(if_nameindex HAVE_IF_NAMEINDEX)
 CHECK_FUNCTION_EXISTS(if_nametoindex HAVE_IF_NAMETOINDEX)
 CHECK_FUNCTION_EXISTS(mblen HAVE_MBLEN)
 CHECK_FUNCTION_EXISTS(memmove HAVE_MEMMOVE)
+CHECK_FUNCTION_EXISTS(memrchr HAVE_MEMRCHR)
 CHECK_FUNCTION_EXISTS(nl_langinfo HAVE_NL_LANGINFO)
 CHECK_FUNCTION_EXISTS(select HAVE_SELECT)
 CHECK_FUNCTION_EXISTS(setlocale HAVE_SETLOCALE)
