--- a/configure.ac
+++ b/configure.ac
@@ -202,6 +202,13 @@ AC_RUN_IFELSE([AC_LANG_PROGRAM([[#include <string.h>]],[[
                            [Define to 1 if you have the strlcat function.])
               ])
 
+AC_MSG_CHECKING([for C++11])
+AC_RUN_IFELSE([AC_LANG_PROGRAM([[#include <regex>]],[[
+               if (__cplusplus < 201103L) return 1;]])],
+              [AC_MSG_RESULT([yes])],
+              [AC_MSG_RESULT([no])
+               AC_MSG_ERROR([C++11 is required. Add -std=c++11 to CXXFLAGS.])
+              ])
 
 PKG_CHECK_MODULES([CORE],[fontconfig xrender xcomposite xdamage xfixes xext x11])
 AC_SUBST([CORE_CFLAGS])
