Discover and remember existing icon paths
This avoids blind attempts to access icons in unknown folders.

This also implements a selection option (or excluding option) for
specific (maybe pattern matched) XDG icon themes

Also fixes the detection of wordexp in cmake setup.

Also reorder icon members to save memory (due to type alignment)

--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -86,6 +86,7 @@
 #cmakedefine HAVE_MACHINE_APMVAR_H 1
 #cmakedefine HAVE_MACHINE_APM_BIOS_H 1
 #cmakedefine HAVE_EXECINFO_H 1
+#cmakedefine HAVE_WORDEXP 1
 
 #define LIBDIR "@LIBDIR@"
 #define CFGDIR "@CFGDIR@"
