--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -287,6 +287,8 @@ icewm_SOURCES = \
 	aworkspaces.h \
 	amailbox.cc \
 	amailbox.h \
+	akeyboard.cc \
+	akeyboard.h \
 	aclock.cc \
 	aclock.h \
 	acpustatus.cc \
