--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,23 +105,12 @@ endif()
 # for x in `cat funclist` ; do grep $x src/* lib/* && echo $x >> exlist ; done
 # perl -e 'print "CHECK_FUNCTION_EXISTS($_ HAVE_".uc($_).")\n" for @ARGV' `cat exlist`
 # perl -e 'print "#cmakedefine HAVE_".uc($_)."\n" for @ARGV' `cat exlist`
-CHECK_FUNCTION_EXISTS(abort HAVE_ABORT)
 CHECK_FUNCTION_EXISTS(backtrace_symbols_fd HAVE_BACKTRACE_SYMBOLS_FD)
-CHECK_FUNCTION_EXISTS(getloadavg HAVE_GETLOADAVG2)
-CHECK_FUNCTION_EXISTS(if_nameindex HAVE_IF_NAMEINDEX)
-CHECK_FUNCTION_EXISTS(if_nametoindex HAVE_IF_NAMETOINDEX)
-CHECK_FUNCTION_EXISTS(mblen HAVE_MBLEN)
-CHECK_FUNCTION_EXISTS(memmove HAVE_MEMMOVE)
 CHECK_FUNCTION_EXISTS(memrchr HAVE_MEMRCHR)
-CHECK_FUNCTION_EXISTS(nl_langinfo HAVE_NL_LANGINFO)
-CHECK_FUNCTION_EXISTS(select HAVE_SELECT)
-CHECK_FUNCTION_EXISTS(setlocale HAVE_SETLOCALE)
-CHECK_FUNCTION_EXISTS(socket HAVE_SOCKET)
 CHECK_FUNCTION_EXISTS(strlcat HAVE_STRLCAT)
 CHECK_FUNCTION_EXISTS(strlcpy HAVE_STRLCPY)
+CHECK_FUNCTION_EXISTS(sysctl HAVE_SYSCTL)
 CHECK_FUNCTION_EXISTS(sysctlbyname HAVE_SYSCTLBYNAME)
-CHECK_FUNCTION_EXISTS(sysinfo HAVE_SYSINFO)
-
 CHECK_LIBRARY_EXISTS (X11 XInternAtoms "" HAVE_XINTERNATOMS)
 
 # perl -e 'do { s/\.|\//_/g; $_=uc $_;  print "#cmakedefine HAVE_$_\n"} for @ARGV' `cat headersDa`
@@ -129,16 +118,13 @@ CHECK_LIBRARY_EXISTS (X11 XInternAtoms "" HAVE_XINTERNATOMS)
 CHECK_INCLUDE_FILE_CXX(execinfo.h HAVE_EXECINFO_H)
 CHECK_INCLUDE_FILE_CXX(fcntl.h HAVE_FCNTL_H)
 CHECK_INCLUDE_FILE_CXX(libgen.h HAVE_LIBGEN_H)
-CHECK_INCLUDE_FILE_CXX(machine/apm_bios.h HAVE_MACHINE_APM_BIOS_H)
-CHECK_INCLUDE_FILE_CXX(machine/apmvar.h HAVE_MACHINE_APMVAR_H)
 CHECK_INCLUDE_FILE_CXX(sched.h HAVE_SCHED_H)
-CHECK_INCLUDE_FILE_CXX(sys/file.h HAVE_SYS_FILE_H)
+CHECK_INCLUDE_FILE_CXX(strings.h HAVE_STRINGS_H)
 CHECK_INCLUDE_FILE_CXX(sys/ioctl.h HAVE_SYS_IOCTL_H)
 CHECK_INCLUDE_FILE_CXX(sys/param.h HAVE_SYS_PARAM_H)
 CHECK_INCLUDE_FILE_CXX(sys/sched.h HAVE_SYS_SCHED_H)
 CHECK_INCLUDE_FILE_CXX(sys/sysctl.h HAVE_SYS_SYSCTL_H)
 CHECK_INCLUDE_FILE_CXX(uvm/uvm_param.h HAVE_UVM_UVM_PARAM_H)
-CHECK_INCLUDE_FILE_CXX(wchar.h HAVE_WCHAR_H)
 
 CHECK_TYPE_SIZE(char SIZEOF_CHAR)
 CHECK_TYPE_SIZE(long SIZEOF_LONG)
@@ -353,7 +339,6 @@ if(sndfile_FOUND)
         set(ENABLE_OSS "${HAVE_SYS_SOUNDCARD_H}")
     endif()
 endif(sndfile_FOUND)
-CHECK_INCLUDE_FILE_CXX(sndfile.h HAVE_SNDFILE_H ${audio_flags})
 
 option(XINERAMA "Define to enable Xinerama support" on)
 if(XINERAMA)
