Make cmake work for BSD+Solaris.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.2)
 
 PROJECT(ICEWM CXX)
 
@@ -90,13 +90,14 @@ if(ENABLE_NLS OR CONFIG_I18N)
     if(CONFIG_LIBICONV)
         LIST(APPEND nls_LIBS iconv)
     endif()
-    find_library(CONFIG_LIBINTL intl)
-    if(CONFIG_LIBINTL)
-        LIST(APPEND nls_LIBS intl)
+    INCLUDE(FindIntl)
+    if(Intl_FOUND)
+        LIST(APPEND nls_LIBS ${Intl_LIBRARIES})
+        LIST(APPEND nls_CFLAGS -I${Intl_INCLUDE_DIRS})
     endif()
 endif()
 
-if(ENABLE_LTO)
+if(ENABLE_LTO AND ${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
     list(APPEND CXXFLAGS_COMMON -flto)
     list(APPEND EXTRA_LIBS -flto)
 endif()
@@ -111,7 +112,6 @@ CHECK_FUNCTION_EXISTS(strlcat HAVE_STRLCAT)
 CHECK_FUNCTION_EXISTS(strlcpy HAVE_STRLCPY)
 CHECK_FUNCTION_EXISTS(sysctl HAVE_SYSCTL)
 CHECK_FUNCTION_EXISTS(sysctlbyname HAVE_SYSCTLBYNAME)
-CHECK_LIBRARY_EXISTS (X11 XInternAtoms "" HAVE_XINTERNATOMS)
 
 # perl -e 'do { s/\.|\//_/g; $_=uc $_;  print "#cmakedefine HAVE_$_\n"} for @ARGV' `cat headersDa`
 # perl -e 'do {my $orig=$_; s/\.|\//_/g; $_=uc $_; print "CHECK_INCLUDE_FILE_CXX($orig HAVE_$_)\n"} for @ARGV' `cat headersDa`
@@ -122,8 +122,8 @@ CHECK_INCLUDE_FILE_CXX(sched.h HAVE_SCHED_H)
 CHECK_INCLUDE_FILE_CXX(strings.h HAVE_STRINGS_H)
 CHECK_INCLUDE_FILE_CXX(sys/ioctl.h HAVE_SYS_IOCTL_H)
 CHECK_INCLUDE_FILE_CXX(sys/param.h HAVE_SYS_PARAM_H)
-CHECK_INCLUDE_FILE_CXX(sys/sched.h HAVE_SYS_SCHED_H)
-CHECK_INCLUDE_FILE_CXX(sys/sysctl.h HAVE_SYS_SYSCTL_H)
+CHECK_INCLUDE_FILE_CXX(sys/sched.h HAVE_SYS_SCHED_H "-include /usr/include/sched.h")
+CHECK_INCLUDE_FILE_CXX(sys/sysctl.h HAVE_SYS_SYSCTL_H "-include /usr/include/sys/types.h")
 CHECK_INCLUDE_FILE_CXX(uvm/uvm_param.h HAVE_UVM_UVM_PARAM_H)
 
 CHECK_TYPE_SIZE(char SIZEOF_CHAR)
@@ -142,6 +142,8 @@ pkg_check_modules(xdamage REQUIRED xdamage)
 pkg_check_modules(xfixes REQUIRED xfixes)
 pkg_check_modules(xext REQUIRED xext)
 pkg_check_modules(x11 REQUIRED x11)
+
+CHECK_LIBRARY_EXISTS(X11 XInternAtoms ${x11_LIBDIR} HAVE_XINTERNATOMS)
 
 set(icewm_img_libs ${xrender_LDFLAGS} ${xcomposite_LDFLAGS} ${xdamage_LDFLAGS} ${xfixes_LDFLAGS})
 
@@ -373,11 +375,16 @@ option(DEBUG "Define if you want to debug IceWM" off)
 # some extra sugar where available    #
 #######################################
 
-SET(LDFLAGS_ORIG ${CMAKE_EXE_LINKER_FLAGS})
-SET(CMAKE_EXE_LINKER_FLAGS "${LDFLAGS_ORIG} -Wl,--as-needed ")
-CHECK_CXX_SOURCE_COMPILES("int main() {return 0;}" USE_WLASNEEDED)
-IF(NOT USE_WLASNEEDED)
-    SET(CMAKE_EXE_LINKER_FLAGS ${LDFLAGS_ORIG})
+IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
+    SET(LDFLAGS_ORIG ${CMAKE_EXE_LINKER_FLAGS})
+    SET(CMAKE_EXE_LINKER_FLAGS "${LDFLAGS_ORIG} -Wl,--as-needed ")
+    CHECK_CXX_SOURCE_COMPILES("int main() {return 0;}" USE_WLASNEEDED)
+    IF(NOT USE_WLASNEEDED)
+        SET(CMAKE_EXE_LINKER_FLAGS ${LDFLAGS_ORIG})
+    ENDIF()
+ENDIF()
+IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "SunOS")
+    list(APPEND EXTRA_LIBS -lsocket)
 ENDIF()
 
 #######################################
@@ -424,31 +431,31 @@ SET(ICEWM_SRCS ${ICE_COMMON_SRCS} ${ITK_SRCS}
     )
 
 ADD_EXECUTABLE(icewm${EXEEXT} ${ICEWM_SRCS})
-set(icewm_pc_flags ${fontconfig_CFLAGS} ${x11_CFLAGS} ${xext_CFLAGS} ${libpng_CFLAGS} ${libxpm_CFLAGS} ${pixbuf_CFLAGS} ${xft_CFLAGS} ${xrandr_CFLAGS} ${xrender_CFLAGS} ${xinerama_CFLAGS} ${fribidi_CFLAGS})
+set(icewm_pc_flags ${fontconfig_CFLAGS} ${x11_CFLAGS} ${xext_CFLAGS} ${libpng_CFLAGS} ${libxpm_CFLAGS} ${pixbuf_CFLAGS} ${xft_CFLAGS} ${xrandr_CFLAGS} ${xrender_CFLAGS} ${xinerama_CFLAGS} ${fribidi_CFLAGS} ${nls_CFLAGS})
 target_compile_options(icewm${EXEEXT} PUBLIC ${CXXFLAGS_COMMON} ${icewm_pc_flags})
-set(icewm_libs ${sm_LIBS} ${nls_LIBS} ${fontconfig_LDFLAGS} ${fribidi_LDFLAGS} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS} ${xinerama_LDFLAGS} ${EXTRA_LIBS})
-TARGET_LINK_LIBRARIES(icewm${EXEEXT} ${icewm_libs} ${icewm_img_libs})
+set(icewm_libs ${sm_LIBS} ${nls_LIBS} ${fontconfig_LDFLAGS} ${fribidi_LDFLAGS} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS} ${xinerama_LDFLAGS})
+TARGET_LINK_LIBRARIES(icewm${EXEEXT} ${icewm_libs} ${icewm_img_libs} ${EXTRA_LIBS})
 
 ADD_EXECUTABLE(genpref${EXEEXT} genpref.cc ${MISC_SRCS})
-set(genpref_pc_flags ${x11_CFLAGS})
+set(genpref_pc_flags ${x11_CFLAGS}  ${nls_CFLAGS})
 target_compile_options(genpref${EXEEXT} PUBLIC ${CXXFLAGS_COMMON} ${genpref_pc_flags})
 TARGET_LINK_LIBRARIES(genpref${EXEEXT} ${x11_LDFLAGS} ${nls_LIBS} ${EXTRA_LIBS})
 
 ADD_EXECUTABLE(strtest EXCLUDE_FROM_ALL strtest.cc upath.cc udir.cc ${MISC_SRCS})
 target_compile_options(strtest PUBLIC ${CXXFLAGS_COMMON} ${icewm_pc_flags})
-TARGET_LINK_LIBRARIES(strtest ${icewm_libs} ${icewm_img_libs})
+TARGET_LINK_LIBRARIES(strtest)
 
 add_test(strtest ${CMAKE_BINARY_DIR}/strtest)
 
 IF(CONFIG_FDO_MENUS)
     ADD_EXECUTABLE(icewm-menu-fdo${EXEEXT} ycollections.cc fdomenu.cc ${MISC_SRCS})
-    target_compile_options(icewm-menu-fdo${EXEEXT} PUBLIC ${CXXFLAGS_COMMON} ${gio_CFLAGS})
-    TARGET_LINK_LIBRARIES(icewm-menu-fdo${EXEEXT} ${gio_LDFLAGS} ${nls_LIBS} ${EXTRA_LIBS})
+    target_compile_options(icewm-menu-fdo${EXEEXT} PUBLIC ${CXXFLAGS_COMMON} ${x11_CFLAGS} ${gio_CFLAGS}  ${nls_CFLAGS})
+    TARGET_LINK_LIBRARIES(icewm-menu-fdo${EXEEXT} ${x11_LDFLAGS} ${gio_LDFLAGS} ${nls_LIBS} ${EXTRA_LIBS})
     INSTALL(TARGETS icewm-menu-fdo${EXEEXT} DESTINATION ${BINDIR})
 ENDIF()
 
 ADD_EXECUTABLE(icewm-session${EXEEXT} icesm.cc yapp.cc upath.cc ytimer.cc yprefs.cc ${MISC_SRCS})
-set(icewm_session_pc_flags ${x11_CFLAGS})
+set(icewm_session_pc_flags ${x11_CFLAGS}  ${nls_CFLAGS})
 target_compile_options(icewm-session${EXEEXT} PUBLIC ${CXXFLAGS_COMMON} ${icewm_session_pc_flags})
 TARGET_LINK_LIBRARIES(icewm-session${EXEEXT} ${nls_LIBS} ${x11_LDFLAGS} ${EXTRA_LIBS})
 
@@ -488,7 +495,7 @@ if(NOT CMAKE_CROSSCOMPILING)
     ADD_CUSTOM_COMMAND(TARGET genpref${EXEEXT}
         POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/lib
-        COMMAND genpref${EXEEXT} > lib/preferences
+        COMMAND genpref${EXEEXT} -o ${CMAKE_BINARY_DIR}/lib/preferences
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
     INSTALL(FILES ${CMAKE_BINARY_DIR}/lib/preferences DESTINATION ${LIBDIR})
 endif()
