--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -74,6 +74,7 @@
 #cmakedefine LOGEVENTS 1
 #cmakedefine XINERAMA 1
 #cmakedefine DEBUG 1
+#cmakedefine DEBUG_NOUTYPUN
 #cmakedefine XTERMCMD @XTERMCMD@
 
 #define CONFIG_DEFAULT_THEME "@CONFIG_DEFAULT_THEME@"
